tests/cases/attributes/errors/attribute-derive-default-enum.ari
@derive(Default)
enum State {
  Ready,
}

fn main() -> i64 {
  return 0;
}
